# ai_cicd_pipeline_demo

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_pipeline.py
configs/: pipeline.example.yaml
src/ai_cicd_pipeline/: __main__.py  cli.py  config.py  orchestrator.py  pipeline_state.py
src/ai_cicd_pipeline/services/: alerting_service.py
src/ai_cicd_pipeline/stages/: analyzer_ai.py  base.py  build_executor.py  commit_ingestor.py  deployer.py  deployment_planner.py  flaky_test_manager.py  monitor_agent.py  risk_predictor_ai.py  rollback_controller.py  test_runner.py  test_selector.py
